<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notification1"
            android:title="@string/notification"
            ></item>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profiles"
            android:title="@string/profile" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_language"
                android:icon="@drawable/language"
                android:title="@string/language" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/sign_out"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
