<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:id="@+id/img_icon"
            android:src="@drawable/icon"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_icon">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_user"
                android:textColor="@color/colorGreen"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textSize="30sp"
                />
            <EditText
                android:layout_margin="10dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_full_name"
                android:hint="@string/enter_fullname"
                android:textColorHint="@color/colorGreen"
                />
            <EditText
                android:layout_margin="10dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEmail"
                android:hint="@string/enter_email"
                android:textColorHint="@color/colorGreen"
                />
            <EditText
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPassword"
                android:hint="@string/enter_password"
                android:textColorHint="@color/colorGreen"
                />
            <EditText
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtHobby"
                android:hint="@string/enter_hobby"
                android:textColorHint="@color/colorGreen"
                android:inputType="textMultiLine|textLongMessage"
                />
            <Button
                android:layout_margin="10dp"
                android:text="@string/register"
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGreen"
                android:background="@color/colorWhiteGreen"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSingIn"
                android:text="@string/sign_in_here"
                android:textColor="@color/colorGreen"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>

