<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="25sp"
                android:background="@color/colorGreen"
                android:textColor="@color/colorWhite"
                android:padding="15sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:id="@+id/img_avatar"
                    android:layout_gravity="center"
                    android:src="@drawable/user"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="20sp"
                        android:textColor="@color/colorGreen"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtName"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/hobby"
                        android:textSize="20sp"
                        android:textColor="@color/colorGreen"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:id="@+id/txt_hobby"
                        android:inputType="textMultiLine|textLongMessage"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="20sp"
                        android:textColor="@color/colorGreen"
                        />
                    <Button
                        android:layout_width="213dp"
                        android:layout_height="wrap_content"
                        android:text="@string/change_password"
                        android:id="@+id/btn_change_password"
                        android:background="@color/colorWhiteGreen"
                        android:textColor="@color/colorGreen"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnHuy"
                    android:text="@string/cancel"
                    android:textSize="20sp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorWhiteGreen"
                    android:textColor="@color/colorGreen"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnLuu"
                    android:text="@string/save"
                    android:textSize="20sp"
                    android:background="@color/colorWhiteGreen"
                    android:textColor="@color/colorGreen"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
